--- a/pages/Romme.html
+++ b/pages/Romme.html
@@ -14,8 +14,8 @@
   <body>
     <h2>Gegebenheiten</h2>
     <ul>
-      <li>Anzahl der Spieler: 2</li>
-      <li>Spieldauer: bis zu 10 Minuten</li>
+      <li>Anzahl der Spieler: 2-6</li>
+      <li>Spieldauer: bis zu 60 Minuten</li>
     </ul>
     <h2>Regeln</h2>
     <ul>
