--- a/pages/backgammon.html
+++ b/pages/backgammon.html
@@ -1,42 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Orhun Dönmez">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Orhun Dönmez" />
     <title>Backgammon</title>
   </head>
   <body>
-    <p align="center"><b><u><font size="+4">Backgammon</font></u></b></p>
+    <p align="center">
+      <b
+        ><u><font size="+4">Backgammon</font></u></b
+      >
+    </p>
     Backgammon ist ein Brettspiel, das zwei Spieler gegeneinander spielen
-    können.
-    Es ist eines der ältesten Spiele der Welt. Gewonnen hat der Spieler,
-    der seine Spielsteine als Erster aus seinem Feld abtragen kann.
-
-    Der Name des Spiels kommt von den englischen Wörtern „back“ für „zurück“
-    und „gammon“, eine veraltete Form von „game“, also Spiel.
-    Empfohlen wird das Spiel ab acht Jahren. Es ist zur Hälfte ein
-    Glücksspiel,
-    aber genauso gut muss man gut nachdenken können.
+    können. Es ist eines der ältesten Spiele der Welt. Gewonnen hat der Spieler,
+    der seine Spielsteine als Erster aus seinem Feld abtragen kann. Der Name des
+    Spiels kommt von den englischen Wörtern „back“ für „zurück“ und „gammon“,
+    eine veraltete Form von „game“, also Spiel. Empfohlen wird das Spiel ab acht
+    Jahren. Es ist zur Hälfte ein Glücksspiel, aber genauso gut muss man gut
+    nachdenken können.
     <div>
-      <img style="padding: 10px; padding-top: 20px;"
+      <img
+        style="padding: 10px; padding-top: 20px"
         src="https://images.brettspielnetz.de/spelregels/backgammon/image011.gif"
-        alt="Backgammon mögliche">
+        alt="Backgammon mögliche"
+      />
     </div>
     <h2>Wie spielt man?</h2>
     <p>
-      Backgammon wird mit schwarzen und weißen Spielsteinen auf einem
-      Spielfeld
-      gespielt.
-      Das Spielfeld besteht aus 24 Dreiecken,
-      je 12 auf einer Seite. Die 12 Dreiecke werden in der Mitte noch einmal
-      geteilt,
-      ein Heim- und Außenfeld. Meistens hat jeder Spieler 15 Steine, der eine
-      also
-      15 weiße und der andere 15 schwarze.
-      Dazu braucht man zwei Würfel mit den Werten 1 bis 6.
-
+      Backgammon wird mit schwarzen und weißen Spielsteinen auf einem Spielfeld
+      gespielt. Das Spielfeld besteht aus 24 Dreiecken, je 12 auf einer Seite.
+      Die 12 Dreiecke werden in der Mitte noch einmal geteilt, ein Heim- und
+      Außenfeld. Meistens hat jeder Spieler 15 Steine, der eine also 15 weiße
+      und der andere 15 schwarze. Dazu braucht man zwei Würfel mit den Werten 1
+      bis 6.
     </p>
     <p>
       Am Anfang liegen sich die 15 Spielsteine schräg gegenüber im jeweiligen
@@ -55,42 +53,36 @@
       Dreieck nehmen.
     </p>
     <div>
-      <img style="padding: 10px; padding-top: 20px;"
+      <img
+        style="padding: 10px; padding-top: 20px"
         src="https://images.brettspielnetz.de/spelregels/backgammon/image003.gif"
-        alt="Backgammon mögliche">
+        alt="Backgammon mögliche"
+      />
     </div>
 
     <h2>Ziel des Spiels</h2>
-    Das Spielziel besteht darin, seine eigenen Steine in das eigene Heimfeld
-    zu
-    bringen
-    und sie dann von dort abzutragen. Hier muss die auf der Abbildung
-    vorgegebene
-    Laufrichtung beachtet werden (man darf nie in die entgegengesetzte
-    Richtung
-    ziehen). Gewonnen hat der Spieler, der am schnellsten seine Spielsteine
-    vom
-    Brett
-    gebracht hat.
+    Das Spielziel besteht darin, seine eigenen Steine in das eigene Heimfeld zu
+    bringen und sie dann von dort abzutragen. Hier muss die auf der Abbildung
+    vorgegebene Laufrichtung beachtet werden (man darf nie in die
+    entgegengesetzte Richtung ziehen). Gewonnen hat der Spieler, der am
+    schnellsten seine Spielsteine vom Brett gebracht hat.
 
     <h2>TL;DR</h2>
     <ul>
-      <li>
-        2 Spieler
-      </li>
-      <li>
-        Steine in das Heimfeld durch Würfeln bekommen
-      </li>
-      <li>
-        Gewinnen durch aufsammeln der eigenen Steine
-      </li>
+      <li>2 Spieler</li>
+      <li>Steine in das Heimfeld durch Würfeln bekommen</li>
+      <li>Gewinnen durch aufsammeln der eigenen Steine</li>
     </ul>
 
-    <p align="center"><a class="ex5" href="backgammon.html" style="color:
-        #000000"> <font size="+3">&#x21E7;</font></a></p>
-    <p align="center"><a class="ex5" href="index.html" style="color: #000000">zur&uuml;ck
-        zur Startseite</a></p>
-
-
+    <p align="center">
+      <a class="ex5" href="backgammon.html" style="color: #000000">
+        <font size="+3">&#x21E7;</font></a
+      >
+    </p>
+    <p align="center">
+      <a class="ex5" href="../index.html" style="color: #000000"
+        >zur&uuml;ck zur Startseite</a
+      >
+    </p>
   </body>
 </html>
