--- a/pages/scheresteinpapier.html
+++ b/pages/scheresteinpapier.html
@@ -28,17 +28,21 @@
       </p>
 
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur magnam
-        excepturi incidunt, ipsum facilis cupiditate nihil vel temporibus sed
-        modi praesentium et tempora quo numquam perspiciatis, officiis veniam?
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        <s
+          >Tenetur magnam excepturi incidunt, ipsum facilis cupiditate nihil vel
+          temporibus sed modi praesentium et tempora quo numquam perspiciatis,
+          officiis veniam?</s
+        >
         Voluptas, dolores.
       </p>
 
       <h3 id="Vorraussetzungen">Vorraussetzungen</h3>
 
       <p>
-        Kommen wir zum schönen an Schere! Stein! Papier!. Du benötigst kein
-        zusätzliches Equipment! Du benötigst nur deine Hand.
+        Kommen wir zum schönen an <u><b>SCHERE! STEIN! PAPIER!</b></u
+        >. Du benötigst kein zusätzliches Equipment! Du benötigst nur deine
+        Hand.
       </p>
 
       <img
@@ -55,12 +59,22 @@
       <img
         width="200"
         src="https://images.pexels.com/photos/9017572/pexels-photo-9017572.jpeg?cs=srgb&dl=pexels-kevin-malik-9017572.jpg&fm=jpg"
-        alt="Schere"
+        alt="Schere Hand"
       />
 
       <h4>Stein:</h4>
+      <img
+        width="200px"
+        src="https://images.pexels.com/photos/635356/pexels-photo-635356.jpeg?cs=srgb&dl=pexels-neosiam-635356.jpg&fm=jpg"
+        alt="Stein Hand"
+      />
 
       <h4>Papier:</h4>
+      <img
+        width="200px"
+        src="https://images.pexels.com/photos/9017588/pexels-photo-9017588.jpeg?cs=srgb&dl=pexels-kevin-malik-9017588.jpg&fm=jpg"
+        alt="Papier Hand"
+      />
 
       <h3 id="Regeln">Regeln</h3>
 
@@ -85,6 +99,18 @@
 
       <h3 id="Schlag-Tabelle">Schlag-Tabelle</h3>
 
+      <p>
+        In der folgenden Tabelle erfahrt ihr welches Handzeichen welches
+        <b>schlägt</b>
+      </p>
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+        facilis deserunt minima. Et in quidem quos repellendus temporibus,
+        voluptates dolores omnis odio voluptatibus voluptate? Voluptatem impedit
+        possimus error quaerat maxime?
+      </p>
+
       <table border="3px">
         <tr>
           <th>Zeichen</th>
@@ -105,6 +131,22 @@
           <td>Schere</td>
         </tr>
       </table>
+
+      <h3>Kommentare</h3>
+
+      <form action="submit">
+        <input type="text" placeholder="Username" />
+        <br />
+        <textarea
+          placeholder="Kommentar"
+          name=""
+          id=""
+          cols="30"
+          rows="10"
+        ></textarea>
+        <br />
+        <button type="submit">Submit</button>
+      </form>
     </main>
 
     <footer>
