completed list of games on index

--- a/index.html
+++ b/index.html
@@ -19,14 +19,29 @@
         <h1>Spielanleitungen</h1>
         <p>Wir wollen Spieleanleitungen für die absoluten Klassiker der
           Gesellschaftsspiele und Kartenspiele schreiben.</p>
-        <ul>
-          <li>
-            <a href="pages/backgammon.html">Backgammon</a>
-          </li>
-          <li>
-            <a href="pages/Durak.html">Durak</a>
-          </li>
-        </ul>
+        <section>
+          <h2>Liste der Spiele:</h2>
+          <p>
+            Bisher könnt ihr mit folgenden Anleitungen spielen:
+          </p>
+          <ul>
+            <li>
+              <a href="pages/backgammon.html">Backgammon</a>
+            </li>
+            <li>
+              <a href="pages/Romme.html">Rommé</a>
+            </li>
+            <li>
+              <a href="pages/tictactoe.html">TicTacToe</a>
+            </li>
+            <li>
+              <a href="pages/kniffel.html">Kniffel</a>
+            </li>
+            <li>
+              <a href="pages/scheresteinpapier.html">Schere Stein Papier</a>
+            </li>
+          </ul>
+        </section>
         <table>
           <thead>
             <tr>
