--- a/pages/backgammon.html
+++ b/pages/backgammon.html
@@ -74,15 +74,17 @@
       <li>Gewinnen durch aufsammeln der eigenen Steine</li>
     </ul>
 
-    <p align="center">
-      <a class="ex5" href="backgammon.html" style="color: #000000">
-        <font size="+3">&#x21E7;</font></a
-      >
-    </p>
-    <p align="center">
-      <a class="ex5" href="../index.html" style="color: #000000"
-        >zur&uuml;ck zur Startseite</a
-      >
-    </p>
+    <footer>
+      <p align="center">
+        <a class="ex5" href="backgammon.html" style="color: #000000">
+          <font size="+3">&#x21E7;</font></a
+        >
+      </p>
+      <p align="center">
+        <a class="ex5" href="../index.html" style="color: #000000"
+          >zurück zur Startseite</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
