--- a/pages/scheresteinpapier.html
+++ b/pages/scheresteinpapier.html
@@ -163,7 +163,13 @@
     </main>
 
     <footer>
-      <p>Erstellt durch die Webprogrammierungs-Gruppe.</p>
+      <p align="center">
+        <a href="#top"> Back to Top </a>
+      </p>
+      <p align="center">
+        <a href="../index.html">zurück zur Startseite</a>
+      </p>
+      <p>Erstellt durch die Webprogrammierungs-Gruppe A2.</p>
     </footer>
   </body>
 </html>
