--- a/pages/kniffel.html
+++ b/pages/kniffel.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    
+      <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Kniffel Anleitung</title>
     <meta name="author" content="Tim Jonzek">
@@ -12,61 +14,202 @@
   <header>
     <h1>Kniffel Spielanleitung</h1>
   </header>
-  <body>
-    <h2>Spielmaterial</h2>
-    <ul>
-      <li>5 Würfel</li>
-      <li>1 Würfelbecher</li>
-      <li>1 Kniffel-Block</li>
-      <li>4 Stifte</li>
-    </ul>
-    <h2>Spielvorbereitung</h2>
-    <p>
-      Ein Spieler wird bestimmt, der für alle Mitspieler
-      die Punkte in den Kniffel-Block einträgt. Es wird
-      reihum gewürfelt, und wer die höchste Zahl hat,
-      beginnt. Nachdem die Namen der Mitspieler in
-      der obersten Zeile des Kniffel-Blocks notiert
-      sind, kann das Spiel auch schon losgehen
-    </p>
-    <h2>Spielziel</h2>
-    <p>
-      Ziel des Spiels ist es Clever zu würfeln und dabei die meisten Punkte zu
-      erreichen.
-    </p>
-    <h2>Spielverlauf</h2>
-    <p>
-      Die Spieler sind reihum einmal pro Runde mit
-      dem Würfeln an der Reihe. Dabei können sie bis
-      zu dreimal würfeln. Der erste Wurf erfolgt mit
-      allen fünf Würfeln.
-      Danach kann der Spieler sich entscheiden, mit
-      wie vielen Würfeln er beim 2. und 3. Versuch
-      würfeln möchte. Dabei lässt er die Würfel, die er
-      behalten möchte, vor sich liegen, und würfelt nur
-      mit denen, die ihm „nicht gefallen“. So kann er
-      versuchen, sein Ergebnis mit dem 2. und 3.
-      Versuch zu verbessern. Er kann aber auch auf
-      einen oder beide Zusatzwürfe verzichten.
-      Spätestens nach dem dritten Wurf muss der Spieler
-      sein Wurfergebnis in den Kniffel-Block eintragen
-      lassen. Erfüllt der Wurf keine der Bedingungen
-      für die Kästchen, wird ein beliebiges Kästchen
-      „gestrichen“ (= eine Null wird eingetragen).
-    </p>
-    <h2>Kniffelblock Erklärung</h2>
+  <body style="margin-left: 50px; margin-top: 20px; margin-right: 50px;">
+    <section>
+      <h2>Spielmaterial</h2>
+      <ul>
+        <li>5 Würfel</li>
+        <li>1 Würfelbecher</li>
+        <li>1 Kniffel-Block</li>
+        <li>4 Stifte</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Spielvorbereitung</h2>
+      <p> 
+          Ein Spieler wird bestimmt, der für alle Mitspieler
+          die Punkte in den Kniffel-Block einträgt. Es wird
+          reihum gewürfelt, und wer die höchste Zahl hat,
+          beginnt. Nachdem die Namen der Mitspieler in
+          der obersten Zeile des Kniffel-Blocks notiert
+          sind, kann das Spiel auch schon losgehen
+      </p>
+    </section>
+    <section>
+      <h2>Spielziel</h2>
+      <p> 
+          Ziel des Spiels ist es Clever zu würfeln und dabei die meisten Punkte zu erreichen.
+      </p>
+    </section>
+    <section>
+      <h2>Spielverlauf</h2>
+      <p> 
+          Die Spieler sind reihum einmal pro Runde mit
+          dem Würfeln an der Reihe. Dabei können sie bis
+          zu dreimal würfeln. Der erste Wurf erfolgt mit
+          allen fünf Würfeln.
+          Danach kann der Spieler sich entscheiden, mit
+          wie vielen Würfeln er beim 2. und 3. Versuch
+          würfeln möchte. Dabei lässt er die Würfel, die er
+          behalten möchte, vor sich liegen, und würfelt nur
+          mit denen, die ihm <i>„nicht gefallen“</i>. So kann er
+          versuchen, sein Ergebnis mit dem 2. und 3. 
+          Versuch zu verbessern. Er kann aber auch auf
+          einen oder beide Zusatzwürfe verzichten. 
+          Spätestens nach dem dritten Wurf muss der Spieler
+          sein Wurfergebnis in den Kniffel-Block eintragen
+          lassen. Erfüllt der Wurf keine der Bedingungen
+          für die Kästchen, wird ein beliebiges Kästchen
+          <i>„gestrichen“</i> <mark>(= eine Null wird eingetragen)</mark>.
+      </p>
+    </section>
+    <section>
+      <h2>Kniffelblock Erklärung</h2>
+      <img src="../bilder/Kniffel_Block.jpg"alt="" width="600" height=""></img>
+      <p>
+        <a href="https://images-na.ssl-images-amazon.com/images/I/61WUQitmAML.jpg">Bildquelle</a>
+      </p>
+      
+      <p>
+        Für jeden Spieler ist auf dem Kniffel-Block eine
+        Spalte vorgesehen, in der seine Ergebnisse
+        eingetragen werden. In jeder Runde muss jeder
+        Mitspieler in einem der 13 Kästchen eine
+        Eintragung machen. Dies sollte möglichst die
+        Summe der gewürfelten Augen sein, aber –
+        wenn’s knifflig wird – ist leider auch mal eine
+        Null dabei…
+      </p>
+      <h3>Die Punkte</h3>
+      <p>
+        Der Kniffel-Block ist unterteilt in einen oberen
+        und einen unteren Teil. Im oberen Teil sind die
+        Kästchen für Einsen, Zweien, Dreien, Vieren,
+        Fünfen und Sechsen. Entschließt sich ein Spieler, sein Würfelergebnis hier eintragen zu lassen,
+        zählt er alle gewürfelten gleichen Zahlen zusammen und der Schreiber trägt das Ergebnis in das
+        entsprechende Kästchen ein. 
+      </p>
+      <h3>Bonus</h3>
+      <p>
+        Um den Bonus von 35 Punkten zu bekommen,
+        müssen die Spieler mindestens 63 Punkte im
+        gesamten oberen Teil zusammenaddiert erreichen.
+      </p>
+      <h3>Kästchen für Sonderwürfe</h3>
+      <p>
+        <table  class="table">
+          <tr>
+            <th>Bezeichnung</th>
+            <th>Erklärung</th>
+            <th>Beispiel</th>
+          </tr>
+          <tr>
+            <td><b>Dreierpasch</b></td>
+            <td>Mindestens drei gleiche Zahlen. <b>Alle Augen des Wurfes</b> (nicht nur die der gleichen Zahlen) werden zusammengezählt</td>
+            <td><img src="../bilder/Kniffel_Dreierpasch.png"alt="" width="200" height=""></img></td>
+          </tr>
+          <tr>
+            <td><b>Viererpasch</b></td>
+            <td>Mindestens vier gleiche Zahlen. Auch hier werden <b>alle Augen des Wurfes </b>zusammengezählt</td>
+            <td><img src="../bilder/Kniffel_Viererpasch.png"alt="" width="200" height=""></img></td>
+          </tr>
+          <tr>
+            <td><b>Full-House</b></td>
+            <td>Drei gleiche und zwei gleiche, andere Zahlen (z.B. drei Vieren und zwei Einsen). Für ein Full-House gibt es pauschal <b><i>25 Punkte</i></b></td>
+            <td><img src="../bilder/Kniffel_FullHouse.png"alt="" width="200" height=""></img></td>
+          </tr>
+          <tr>
+            <td><b>Kleine Straße</b></td>
+            <td>Eine Folge von vier aufeinander folgenden Würfeln. Der fünfte Würfel kann eine beliebige Zahl zeigen (z.B. 1, 2, 3, 4, 2). Eine kleine Straße bringt pauschal <b><i>30 Punkte</i></b></td>
+            <td><img src="../bilder/Kniffel_KleineStrasse.png"alt="" width="200" height=""></img></td>
+          </tr>
+          <tr>
+            <td><b>Große Straße</b></td>
+            <td>Eine Folge von fünf aufeinander folgenden Würfeln (z.B. 2, 3, 4, 5, 6). Eine große Straße bringt pauschal <b><i>40 Punkte</i></b></td>
+            <td><img src="../bilder/Kniffel_GrosseStrasse.png"alt="" width="200" height=""></img></td>
+          </tr>
+          <tr>
+            <td><b>Kniffel</b></td>
+            <td>5 gleiche Zahlen. Ein Kniffel bringt <del>100 Punkte</del> <b><mark><i>50 Punkte</i></mark></b></td>
+            <td><img src="../bilder/Kniffel_Kniffel.png"alt="" width="200" height=""></img></td>
+          </tr>
+        </table>
+      </p>
+      <h3>Zusätzliche Kniffel</h3>
+      <p>
+        Für jeden zweiten und weiteren Kniffel trägt
+        der Spieler 50 Zusatzpunkte auf der Rückseite
+        des Blocks ein. Zusätzlich hat der Spieler zwei
+        Möglichkeiten:
+      </p>
+      <h4>Kniffel als Joker im oberen Feld:</h4>
+      <p>
+        Der Spieler darf den Wurf in einem beliebigen
+        freien oberen Feld mit der entsprechenden
+        Höchstpunktzahl eintragen.
+        Es ist egal, mit welchem Würfelergebnis der
+        Kniffel erzielt wurde. Der Spieler kann sich z.B.
+        mit einem 4er Kniffel auch die Höchstpunktzahl
+        25 Punkte im 5er-Feld eintragen.
+      </p>
+      <h4>Kniffel als Joker im unteren Feld:</h4>
+      <p>
+        Der Spieler darf den Wurf in einem beliebigen
+        freien Kästchen im unteren Feld des Blocks mit
+        der Höchstpunktzahl einsetzen.
+        Der Spieler kann sich z.B. 40 Punkte für eine
+        große Straße oder 30 Punkte für einen Viererpasch gutschreiben lassen.
+      </p>
+    </section>
+    <section>
+      <h2> Spielende </h2>
+      <p>
+        Das Spiel endet, sobald das letzte Kästchen
+        beim letzten Spieler ausgefüllt ist. Nun werden
+        alle Punkte (Boni nicht vergessen) zusammengerechnet. Der Spieler mit den meisten Punkten
+        ist der Sieger.
+      </p>
+    </section>
+    <section>
+      <h2>Kommentare</h3>
+        <form action="https://duckduckgo.com">
+          <label for="Username">
+            <input
+              id="Username"
+              name="Username"
+              type="text"
+              placeholder="Username"
+            />
+          </label>
+          <br/>
+          <label for="Kommentar">
+            <textarea
+              placeholder="Kommentar"
+              name="Kommentar"
+              id="Kommentar"
+              cols="30"
+              rows="10"
+            ></textarea>
+          </label>
+          <br />
+          <label for="Submit">
+            <button name="Submt" id="Submit" type="submit">Submit</button>
+          </label>
+        </form>
+    </section>
   </body>
   <footer>
-    Die oben stehende Anleitung wurde unter folgendem Hyperlink gefunden:
-    LINKLINKLINK
+    Die oben stehende Anleitung wurde unter folgendem Hyperlink gefunden: <a href="https://www.schmidtspiele.de/files/Produkte/4/49030%20-%20Kniffel/49203_49030_Kniffel_DE.pdf">Kniffel Anleitung</a>
+    <p align="center">
+      <a class="ex5" href="../index.html" style="color: #000000">zurück zur Startseite</a>
+    </p>
   </footer>
 </html>
-
-- Hierarchisierte Überschriften
-- Listen und Tabellen
+<div style="height: 1000px;"></div>
+- Hierarchisierte Überschriften CHECK
+- Listen und Tabellen CHECK
 - Dem Inhalt entsprechende semantische Text-Elemente (n > 3 unterschiedliche)
-- Nutzen Sie strukturierende (container) Elemente um zu gruppieren (n > 2
-unterschiedliche)
-- Bilder (n > 1)
+- Nutzen Sie strukturierende (container) Elemente um zu gruppieren (n > 2 unterschiedliche)
+- Bilder (n > 1) CHECK
 - Formular
-- Hyperlinks
+- Hyperlinks 
