--- a/pages/backgammon.html
+++ b/pages/backgammon.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Orhun Dönmez" />
     <title>Backgammon</title>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
   </head>
   <body>
     <p align="center">
-      <b
-        ><u><font size="+4">Backgammon</font></u></b
-      >
+      <b><u><font size="+4">Backgammon</font></u></b>
     </p>
     <b> Backgammon </b> ist ein Brettspiel, das zwei Spieler gegeneinander
     spielen können. Es ist eines der ältesten Spiele der Welt. Gewonnen hat der
@@ -31,7 +30,7 @@
         style="padding: 10px; padding-top: 20px"
         src="https://images.brettspielnetz.de/spelregels/backgammon/image011.gif"
         alt="Backgammon mögliche"
-      />
+        />
     </div>
     <h2>Wie spielt man?</h2>
     <p>
@@ -63,7 +62,7 @@
         style="padding: 10px; padding-top: 20px"
         src="https://images.brettspielnetz.de/spelregels/backgammon/image003.gif"
         alt="Backgammon mögliche"
-      />
+        />
     </div>
 
     <h2>Ziel des Spiels</h2>
@@ -90,8 +89,7 @@
         name=""
         id=""
         cols="30"
-        rows="10"
-      ></textarea>
+        rows="10"></textarea>
       <br />
       <button type="submit">Submit</button>
     </form>
@@ -99,13 +97,11 @@
     <footer>
       <p align="center">
         <a class="ex5" href="backgammon.html" style="color: #000000">
-          <font size="+3">&#x21E7;</font></a
-        >
+          <font size="+3">&#x21E7;</font></a>
       </p>
       <p align="center">
-        <a class="ex5" href="../index.html" style="color: #000000"
-          >zurück zur Startseite</a
-        >
+        <a class="ex5" href="../index.html" style="color: #000000">zurück zur
+          Startseite</a>
       </p>
     </footer>
   </body>
