added css file to rps

--- a/pages/scheresteinpapier.html
+++ b/pages/scheresteinpapier.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Neo Henry Sieber" />
     <title>Schere! Stein! Papier!</title>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
   </head>
   <body>
     <main>
@@ -29,19 +30,17 @@
 
       <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-        <s
-          >Tenetur magnam excepturi incidunt, ipsum facilis cupiditate nihil vel
+        <s>Tenetur magnam excepturi incidunt, ipsum facilis cupiditate nihil vel
           temporibus sed modi praesentium et tempora quo numquam perspiciatis,
-          officiis veniam?</s
-        >
+          officiis veniam?</s>
         Voluptas, dolores.
       </p>
 
       <h3 id="Vorraussetzungen">Vorraussetzungen</h3>
 
       <p>
-        Kommen wir zum schönen an <u><b>SCHERE! STEIN! PAPIER!</b></u
-        >. Du benötigst kein zusätzliches Equipment! Du benötigst nur deine
+        Kommen wir zum schönen an <u><b>SCHERE! STEIN! PAPIER!</b></u>. Du
+        benötigst kein zusätzliches Equipment! Du benötigst nur deine
         Hand.
       </p>
 
@@ -49,7 +48,7 @@
         width="300"
         src="https://images.pexels.com/photos/772662/pexels-photo-772662.jpeg?cs=srgb&dl=pexels-victor-freitas-772662.jpg&fm=jpg"
         alt="Hand"
-      />
+        />
 
       <h3>Handzeichen</h3>
 
@@ -60,21 +59,21 @@
         width="200"
         src="https://images.pexels.com/photos/9017572/pexels-photo-9017572.jpeg?cs=srgb&dl=pexels-kevin-malik-9017572.jpg&fm=jpg"
         alt="Schere Hand"
-      />
+        />
 
       <h4>Stein:</h4>
       <img
         width="200px"
         src="https://images.pexels.com/photos/635356/pexels-photo-635356.jpeg?cs=srgb&dl=pexels-neosiam-635356.jpg&fm=jpg"
         alt="Stein Hand"
-      />
+        />
 
       <h4>Papier:</h4>
       <img
         width="200px"
         src="https://images.pexels.com/photos/9017588/pexels-photo-9017588.jpeg?cs=srgb&dl=pexels-kevin-malik-9017588.jpg&fm=jpg"
         alt="Papier Hand"
-      />
+        />
 
       <h3 id="Regeln">Regeln</h3>
 
@@ -105,12 +104,10 @@
       </p>
 
       <p>
-        <em
-          >Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+        <em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
           facilis deserunt minima. Et in quidem quos repellendus temporibus,
           voluptates dolores omnis odio voluptatibus voluptate? Voluptatem
-          impedit possimus error quaerat maxime?</em
-        >
+          impedit possimus error quaerat maxime?</em>
       </p>
 
       <table border="3px">
@@ -137,13 +134,12 @@
       <h3>Kommentare</h3>
 
       <form action="https://duckduckgo.com">
-        <label for="Username"
-          ><input
+        <label for="Username"><input
             id="Username"
             name="Username"
             type="text"
             placeholder="Username"
-        /></label>
+            /></label>
 
         <br />
         <label for="Kommentar">
@@ -152,8 +148,7 @@
             name="Kommentar"
             id="Kommentar"
             cols="30"
-            rows="10"
-          ></textarea>
+            rows="10"></textarea>
         </label>
         <br />
         <label for="Submit">
