--- a/pages/backgammon.html
+++ b/pages/backgammon.html
@@ -6,12 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Orhun Dönmez" />
     <title>Backgammon</title>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
   </head>
   <body>
     <p align="center">
-      <b><u><font size="+4">Backgammon</font></u></b>
+      <b
+        ><u><font size="+4">Backgammon</font></u></b
+      >
     </p>
+
+    <h2>Inhaltsverzeichnis</h2>
+
+    <ol>
+      <li><a href="#Anleitung">Wie spielt man?</a></li>
+      <li><a href="#Ziel">Ziel des Spiels</a></li>
+      <li><a href="#TLDR">TL;DR</a></li>
+    </ol>
+
     <b> Backgammon </b> ist ein Brettspiel, das zwei Spieler gegeneinander
     spielen können. Es ist eines der ältesten Spiele der Welt. Gewonnen hat der
     Spieler, der seine Spielsteine als Erster aus seinem Feld abtragen kann. Der
@@ -30,9 +41,9 @@
         style="padding: 10px; padding-top: 20px"
         src="https://images.brettspielnetz.de/spelregels/backgammon/image011.gif"
         alt="Backgammon mögliche"
-        />
+      />
     </div>
-    <h2>Wie spielt man?</h2>
+    <h2 id="Anleitung">Wie spielt man?</h2>
     <p>
       Backgammon wird mit schwarzen und weißen Spielsteinen auf einem Spielfeld
       gespielt. Das Spielfeld besteht aus 24 Dreiecken, je 12 auf einer Seite.
@@ -62,17 +73,17 @@
         style="padding: 10px; padding-top: 20px"
         src="https://images.brettspielnetz.de/spelregels/backgammon/image003.gif"
         alt="Backgammon mögliche"
-        />
+      />
     </div>
 
-    <h2>Ziel des Spiels</h2>
+    <h2 id="Ziel">Ziel des Spiels</h2>
     Das Spielziel besteht darin, seine eigenen Steine in das eigene Heimfeld zu
     bringen und sie dann von dort abzutragen. Hier muss die auf der Abbildung
     vorgegebene Laufrichtung beachtet werden (man darf nie in die
     entgegengesetzte Richtung ziehen). Gewonnen hat der Spieler, der am
     schnellsten seine Spielsteine vom Brett gebracht hat.
 
-    <h2>TL;DR</h2>
+    <h2 id="TLDR">TL;DR</h2>
     <ul>
       <li>2 Spieler</li>
       <li>Steine in das Heimfeld durch Würfeln bekommen</li>
@@ -89,7 +100,8 @@
         name=""
         id=""
         cols="30"
-        rows="10"></textarea>
+        rows="10"
+      ></textarea>
       <br />
       <button type="submit">Submit</button>
     </form>
@@ -97,11 +109,13 @@
     <footer>
       <p align="center">
         <a class="ex5" href="backgammon.html" style="color: #000000">
-          <font size="+3">&#x21E7;</font></a>
+          <font size="+3">&#x21E7;</font></a
+        >
       </p>
       <p align="center">
-        <a class="ex5" href="../index.html" style="color: #000000">zurück zur
-          Startseite</a>
+        <a class="ex5" href="../index.html" style="color: #000000"
+          >zurück zur Startseite</a
+        >
       </p>
     </footer>
   </body>
