--- a/pages/Romme.html
+++ b/pages/Romme.html
@@ -15,20 +15,31 @@
     <h1>Rommé - Spielanleitung</h1>
   </header>
   <body>
-    <h2>Allgemeines</h2>
+    <h2>Inhaltsverzeichnis</h2>
+
+    <ol>
+      <li><a href="#Allgemeines">Allgemeines</a></li>
+      <li><a href="#Spielvorbereitung">Spielvorbereitung</a></li>
+      <li><a href="#WieWirdGespielt">Wie wird gespielt?</a></li>
+      <li><a href="#FigurenAblegen">Figuren ablegen</a></li>
+      <li><a href="#Joker">Joker</a></li>
+      <li><a href="#Kartenwert">Kartenwerte</a></li>
+    </ol>
+
+    <h2 id="Allgemeines">Allgemeines</h2>
     <ul>
       <li>Anzahl der Spieler:innen: 2-6</li>
       <li>Spieldauer: bis zu 60 Minuten</li>
       <li>Material: 110 Spielkarten</li>
     </ul>
-    <h2>Spielvorbereitung</h2>
+    <h2 id="Spielvorbereitung">Spielvorbereitung</h2>
     <p>
       Alle Spielkarten werden gemischt. Anschließend werden die Karten im 
       Uhrzeigersinn auf alle Spieler:innen verteilt. Jede:r erhält 13 Karten, 
       die austeilende Person gibt sich selber  14 Karten. Die übrigen Karten 
       werden verdeckt als Nachziehstapel in die Mitte gelegt.
     </p>
-    <h2>Wie wird gespielt?</h2>
+    <h2 id="WieWirdGespielt">Wie wird gespielt?</h2>
     <p>Die austeilende Person beginnt, danach sind alle Spieler:innen sind im Uhrzeigersinn dran.</p>
     <br>
     <p>
@@ -48,7 +59,7 @@
       Ein:e Spieler:in beendet den eigenen Zug, indem er oder sie eine beliebige Karte von der Hand abwirft. Es gewinnt
       die Person, die <b>nach dem Abwerfen einer Handkarte</b> keine Karten mehr auf der Hand hat.
     </p>
-    <h3>Figuren ablegen</h3>
+    <h3 id="FigurenAblegen">Figuren ablegen</h3>
     <p>Als gültige Figuren gelten:</p>
     <ul>
       <li>Reihe: drei oder mehr aufeinander folgende Karten der <b>gleichen</b> Farbe, z.B. 7-8-9</li>
@@ -61,13 +72,13 @@
       werden. An eine  Reihe können nur Karten der <i>gleiche</i> Farbe, die um eins kleiner oder ums eins  größer
       als  die jeweils kleinste oder größte Karte der Reihe sind, angelegt werden.
     </p>
-    <h3>Joker</h3>
+    <h3 id="Joker">Joker</h3>
     <p>
       Ein Joker kann eine fehlende Karte in einer Reihe oder einem Satz erstetzen und kann in weiteren Zügen
       durch die entsprechende fehlende Karte ausgetauscht werden. Der:Die Spieler:in, die den Joker ausgetauscht
       kann diesen auf die Hand nehmen.
     </p>
-    <h3>Kartenwerte</h3>
+    <h3 id="Kartenwert">Kartenwerte</h3>
     <p>Die folgende  Tabelle zeigt eine Übersicht über die Werte der einzelnen Karten:</p>
     <p>
       <table border=2>
