--- a/pages/backgammon.html
+++ b/pages/backgammon.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Orhun Dönmez" />
     <title>Backgammon</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../main.css" />
   </head>
   <body>
     <p align="center">
@@ -38,13 +38,14 @@
     </p>
     <div>
       <img
+        class="back-img-1"
         style="padding: 10px; padding-top: 20px"
         src="https://images.brettspielnetz.de/spelregels/backgammon/image011.gif"
         alt="Backgammon mögliche"
       />
     </div>
     <h2 id="Anleitung">Wie spielt man?</h2>
-    <p>
+    <p class="para-back-1">
       Backgammon wird mit schwarzen und weißen Spielsteinen auf einem Spielfeld
       gespielt. Das Spielfeld besteht aus 24 Dreiecken, je 12 auf einer Seite.
       Die 12 Dreiecke werden in der Mitte noch einmal geteilt, ein Heim- und
@@ -52,7 +53,7 @@
       und der andere 15 schwarze. Dazu braucht man zwei Würfel mit den Werten 1
       bis 6.
     </p>
-    <p>
+    <p class="para-back-2">
       Am Anfang liegen sich die 15 Spielsteine schräg gegenüber im jeweiligen
       Außenfeld. Jeder Spieler muss versuchen, seine Steine über das Feld auf
       die andere Seite zu bringen. Dafür würfelt er und entscheidet dann, mit
