added link to logo

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   <body>
     <div class="grid-wrapper">
       <header class="header">
-        <img src="https://pngimg.com/uploads/dice/dice_PNG25.png" alt=""
-          width="50">
+        <a href="index.html">
+          <img src="https://pngimg.com/uploads/dice/dice_PNG25.png" alt=""
+            width="50">
+        </a>
         <strong>Spieleprofis!</strong>
       </header>
       <nav class="game-nav">
