--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jana Deppe">
-    <title>Document</title>
+    <title>Home - Spieleprofis!</title>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
   </head>
   <body>
