Romme Bugs entfernt, die ich versehentlich hinzu- gefügt hab

--- a/pages/Romme.html
+++ b/pages/Romme.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>TicTacToe Anleitung</title>
+    <title>Romme Anleitung</title>
     <meta name='author' content='Joséphine Stöhr'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../main.css'>
     <script src='main.js'></script>
   </head>
+
   <body>
     <div class="grid-wrapper">
       <header class="header">
@@ -17,11 +18,11 @@
       </header>
       <nav class="game-nav">
         <ul>
-          <li><a href="backgammon.html">Backgammon</a></li>
-          <li><a href="kniffel.html">Kniffel</a></li>
-          <li><a href="Romme.html">Rommé</a></li>
-          <li><a href="scheresteinpapier.html">Schere Stein Papier</a></li>
-          <li><a href="tictactoe.html">Tic Tac Toe</a></li>
+          <li><a href="./backgammon.html">Backgammon</a></li>
+          <li><a href="./kniffel.html">Kniffel</a></li>
+          <li><a href="./Romme.html">Rommé</a></li>
+          <li><a href="./scheresteinpapier.html">Schere Stein Papier</a></li>
+          <li><a href="./tictactoe.html">Tic Tac Toe</a></li>
         </ul>
       </nav>
       <main class="main">
@@ -132,11 +133,11 @@
       </p>
       </main>
 
-      <footer>
-        <p align="center"><a class="ex5" href="romme.html" style="color:
-          #000000"> <font size="+3">&#x21E7;</font></a></p>
-        <p align="center"><a class="ex5" href="index.html" style="color: #000000">zur&uuml;ck
-          zur Startseite</a></p>
+      <footer class="footer">
+          <p align="center"><a class="ex5" href="romme.html" style="color:
+            #000000"> <font size="+3">&#x21E7;</font></a></p>
+          <p align="center"><a class="ex5" href="index.html" style="color: #000000">zur&uuml;ck
+            zur Startseite</a></p>
       </footer>
       </div>
   </body>
