Schere Stein Papier to Impressum Link repariert

--- a/pages/scheresteinpapier.html
+++ b/pages/scheresteinpapier.html
@@ -207,7 +207,7 @@
           <a href="../index.html">zurück zur Startseite</a>
         </p>
         <p align="center">
-          <a href="pages/impressum.html">Impressum</a>
+          <a href="impressum.html">Impressum</a>
         </p>
       </footer>
     </div>
