--- a/pages/backgammon.html
+++ b/pages/backgammon.html
@@ -10,6 +10,15 @@
   </head>
   <body>
     <header class="header">
+      <a href="index.html">
+        <img
+          src="https://pngimg.com/uploads/dice/dice_PNG25.png"
+          alt=""
+          width="50"
+        />
+      </a>
+      <strong>Spieleprofis!</strong>
+
       <p align="center">
         <b
           ><u><font size="+4">Backgammon</font></u></b
