fixed: Link zur Startseite

--- a/pages/Romme.html
+++ b/pages/Romme.html
@@ -136,7 +136,7 @@
       <footer class="footer">
           <p align="center"><a class="ex5" href="romme.html" style="color:
             #000000"> <font size="+3">&#x21E7;</font></a></p>
-          <p align="center"><a class="ex5" href="index.html" style="color: #000000">zur&uuml;ck
+          <p align="center"><a class="ex5" href="../index.html" style="color: #000000">zur&uuml;ck
             zur Startseite</a></p>
       </footer>
       </div>
