--- a/pages/backgammon.html
+++ b/pages/backgammon.html
@@ -9,23 +9,17 @@
     <link rel="stylesheet" type="text/css" media="screen" href="../main.css" />
   </head>
   <body>
-    <header class="header">
-      <a href="index.html">
-        <img
-          src="https://pngimg.com/uploads/dice/dice_PNG25.png"
-          alt=""
-          width="50"
-        />
-      </a>
-      <strong>Spieleprofis!</strong>
-
-      <p align="center">
-        <b
-          ><u><font size="+4">Backgammon</font></u></b
-        >
-      </p>
-    </header>
     <div class="grid-wrapper">
+      <header class="header">
+        <a href="index.html">
+          <img
+            src="https://pngimg.com/uploads/dice/dice_PNG25.png"
+            alt=""
+            width="50"
+          />
+        </a>
+        <strong>Spieleprofis!</strong>
+      </header>
       <nav class="game-nav">
         <ul>
           <li><a href="./backgammon.html">Backgammon</a></li>
@@ -39,6 +33,7 @@
       </nav>
 
       <main class="main">
+        <h1>Backgammon - Spielanleitung</h1>
         <h2>Inhaltsverzeichnis</h2>
 
         <ol>
