--- a/pages/tictactoe.html
+++ b/pages/tictactoe.html
@@ -8,14 +8,17 @@
     <link rel="stylesheet" type="text/css" media="screen" href="../main.css" />
     <script src='main.js'></script>
   </head>
-  <header class="header">
-    <p align="center">
-      <b
-        ><u><font size="+4">TicTacToe</font></u></b
-      >
-    </p>
-  </header>
   <div class="grid-wrapper">
+  <header class="header">
+    <a href="index.html">
+      <img
+        src="https://pngimg.com/uploads/dice/dice_PNG25.png"
+        alt=""
+        width="50"
+      />
+    </a>
+    <strong>Spieleprofis!</strong>
+  </header>
   <nav class="game-nav">
     <ul>
       <li><a href="./backgammon.html">Backgammon</a></li>
@@ -29,6 +32,7 @@
   </nav>
   <body>
     <main class="main">
+      <h1>Tic Tac Toe</h1>
       <h2>Inhaltsverzeichnis</h2>
 
         <ol>
