--- a/pages/kniffel.html
+++ b/pages/kniffel.html
@@ -10,7 +10,7 @@
     <script src='main.js'></script>
   </head>
   
-  <body style="margin-left: 50px; margin-top: 20px; margin-right: 50px;">
+  <body>
     <div class="grid-wrapper">
       <header class="header">
         <img src="https://pngimg.com/uploads/dice/dice_PNG25.png" alt=""
