--- a/pages/Romme.html
+++ b/pages/Romme.html
@@ -12,7 +12,7 @@
   <body>
     <div class="grid-wrapper">
       <header class="header">
-        <a href="index.html">
+        <a href="../index.html">
           <img src="https://pngimg.com/uploads/dice/dice_PNG25.png" alt=""
             width="50">
         </a>
