--- a/pages/tictactoe.html
+++ b/pages/tictactoe.html
@@ -10,7 +10,7 @@
   </head>
   <div class="grid-wrapper">
   <header class="header">
-    <a href="index.html">
+    <a href="../index.html">
       <img
         src="https://pngimg.com/uploads/dice/dice_PNG25.png"
         alt=""
@@ -32,7 +32,7 @@
   </nav>
   <body>
     <main class="main">
-      <h1>Tic Tac Toe</h1>
+      <h1>Tic Tac Toe - Spielanleitung</h1>
       <h2>Inhaltsverzeichnis</h2>
 
         <ol>
