--- a/pages/backgammon.html
+++ b/pages/backgammon.html
@@ -11,7 +11,7 @@
   <body>
     <div class="grid-wrapper">
       <header class="header">
-        <a href="index.html">
+        <a href="../index.html">
           <img
             src="https://pngimg.com/uploads/dice/dice_PNG25.png"
             alt=""
