Romme: "Kommentare" hinzugefügt

--- a/pages/Romme.html
+++ b/pages/Romme.html
@@ -133,6 +133,33 @@
           Wenn das Ass in der Folge "Ass>2>3" verwendet wird, hat das Ass den  Wert 1.
         </p>
       </p>
+      <section>
+        <h2 id="Kommentare">Kommentare</h2>
+          <form action="https://duckduckgo.com">
+            <label for="Username">
+              <input
+                id="Username"
+                name="Username"
+                type="text"
+                placeholder="Username"
+              />
+            </label>
+            <br/>
+            <label for="Kommentar">
+              <textarea
+                placeholder="Kommentar"
+                name="Kommentar"
+                id="Kommentar"
+                cols="30"
+                rows="10"
+              ></textarea>
+            </label>
+            <br />
+            <label for="Submit">
+              <button name="Submt" id="Submit" type="submit">Submit</button>
+            </label>
+          </form>
+      </section>
       </main>
 
       <footer class="footer">
