--- a/pages/scheresteinpapier.html
+++ b/pages/scheresteinpapier.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Neo Henry Sieber" />
     <title>Schere! Stein! Papier!</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../main.css" />
   </head>
   <body>
     <div class="grid-wrapper">
