--- a/pages/scheresteinpapier.html
+++ b/pages/scheresteinpapier.html
@@ -21,13 +21,13 @@
       </header>
       <nav class="game-nav">
         <ul>
-          <li><a href="/pages/backgammon.html">Backgammon</a></li>
-          <li><a href="/pages/kniffel.html">Kniffel</a></li>
-          <li><a href="/pages/Romme.html">Rommé</a></li>
+          <li><a href="./backgammon.html">Backgammon</a></li>
+          <li><a href="./kniffel.html">Kniffel</a></li>
+          <li><a href="./Romme.html">Rommé</a></li>
           <li>
-            <a href="/pages/scheresteinpapier.html">Schere Stein Papier</a>
+            <a href="./scheresteinpapier.html">Schere Stein Papier</a>
           </li>
-          <li><a href="/pages/tictactoe.html">Tic Tac Toe</a></li>
+          <li><a href="./tictactoe.html">Tic Tac Toe</a></li>
         </ul>
       </nav>
       <main class="main">
@@ -209,7 +209,7 @@
           <a href="../index.html">zurück zur Startseite</a>
         </p>
         <p align="center">
-          <a href="impressum.html">Impressum</a>
+          <a href="./impressum.html">Impressum</a>
         </p>
       </footer>
     </div>
