Anpassung Links nicht Rechts :D

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jana Deppe">
     <title>Home - Spieleprofis!</title>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='/styles/main.css'>
   </head>
   <body>
     <div class="grid-wrapper">
