--- a/src/pages/Romme.html
+++ b/src/pages/Romme.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Romme Anleitung</title>
     <meta name='author' content='Joséphine Stöhr'>
-    <link rel='stylesheet' type='text/css' media='screen' href='../main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../styles/main.css'>
     <script src='main.js'></script>
   </head>
 
