--- a/src/pages/kniffel.html
+++ b/src/pages/kniffel.html
@@ -6,7 +6,7 @@
     <title>Kniffel Anleitung</title>
     <meta name="author" content="Tim Jonzek">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='../main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../styles/main.css'>
     <script src='main.js'></script>
   </head>
   
@@ -92,7 +92,7 @@
         </section>
         <section>
           <h2 id="Kniffelblock">Kniffelblock Erklärung</h2>
-          <img src="../bilder/Kniffel_Block.jpg"alt="" width="600" height=""></img>
+          <img src="../assets/Kniffel_Block.jpg"alt="" width="600" height=""></img>
           <p>
             <a href="https://images-na.ssl-images-amazon.com/images/I/61WUQitmAML.jpg">Bildquelle</a>
           </p>
@@ -133,32 +133,32 @@
               <tr>
                 <td><b>Dreierpasch</b></td>
                 <td>Mindestens drei gleiche Zahlen. <b>Alle Augen des Wurfes</b> (nicht nur die der gleichen Zahlen) werden zusammengezählt</td>
-                <td><img src="../bilder/Kniffel_Dreierpasch.png"alt="" width="200" height=""></img></td>
+                <td><img src="../assets/Kniffel_Dreierpasch.png"alt="" width="200" height=""></img></td>
               </tr>
               <tr>
                 <td><b>Viererpasch</b></td>
                 <td>Mindestens vier gleiche Zahlen. Auch hier werden <b>alle Augen des Wurfes </b>zusammengezählt</td>
-                <td><img src="../bilder/Kniffel_Viererpasch.png"alt="" width="200" height=""></img></td>
+                <td><img src="../assets/Kniffel_Viererpasch.png"alt="" width="200" height=""></img></td>
               </tr>
               <tr>
                 <td><b>Full-House</b></td>
                 <td>Drei gleiche und zwei gleiche, andere Zahlen (z.B. drei Vieren und zwei Einsen). Für ein Full-House gibt es pauschal <b><i>25 Punkte</i></b></td>
-                <td><img src="../bilder/Kniffel_FullHouse.png"alt="" width="200" height=""></img></td>
+                <td><img src="../assets/Kniffel_FullHouse.png"alt="" width="200" height=""></img></td>
               </tr>
               <tr>
                 <td><b>Kleine Straße</b></td>
                 <td>Eine Folge von vier aufeinander folgenden Würfeln. Der fünfte Würfel kann eine beliebige Zahl zeigen (z.B. 1, 2, 3, 4, 2). Eine kleine Straße bringt pauschal <b><i>30 Punkte</i></b></td>
-                <td><img src="../bilder/Kniffel_KleineStrasse.png"alt="" width="200" height=""></img></td>
+                <td><img src="../assets/Kniffel_KleineStrasse.png"alt="" width="200" height=""></img></td>
               </tr>
               <tr>
                 <td><b>Große Straße</b></td>
                 <td>Eine Folge von fünf aufeinander folgenden Würfeln (z.B. 2, 3, 4, 5, 6). Eine große Straße bringt pauschal <b><i>40 Punkte</i></b></td>
-                <td><img src="../bilder/Kniffel_GrosseStrasse.png"alt="" width="200" height=""></img></td>
+                <td><img src="../assetsKniffel_GrosseStrasse.png"alt="" width="200" height=""></img></td>
               </tr>
               <tr>
                 <td><b>Kniffel</b></td>
                 <td>5 gleiche Zahlen. Ein Kniffel bringt <del>100 Punkte</del> <b><mark><i>50 Punkte</i></mark></b></td>
-                <td><img src="../bilder/Kniffel_Kniffel.png"alt="" width="200" height=""></img></td>
+                <td><img src="../assets/Kniffel_Kniffel.png"alt="" width="200" height=""></img></td>
               </tr>
             </table>
           </p>
