--- a/src/pages/tictactoe.html
+++ b/src/pages/tictactoe.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>TicTacToe Anleitung</title>
     <meta name='author' content='Dustin Wobig'>
-    <link rel="stylesheet" type="text/css" media="screen" href="../main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../styles/main.css" />
     <script src='main.js'></script>
   </head>
   <div class="grid-wrapper">
@@ -55,7 +55,7 @@
           Spielfeld liegen</li>
       </ul>
       <br>
-      <img id="Gewinnmöglichkeiten" src="../bilder/tictactoe1.PNG"alt="" width="600" height=""></img>
+      <img id="Gewinnmöglichkeiten" src="../assets/tictactoe1.PNG"alt="" width="600" height=""></img>
       
 
       <h3>Kommentare</h3>
